--- a/detail.html
+++ b/detail.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Detail</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Hind:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Hind:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/grid.css">
-    <link rel="stylesheet" href="../plugin web design/plugin web design/Icon/fontawesome-5.2.0/css/all.css">
-    <link rel="stylesheet" href="../plugin web design/plugin web design/Sliders/flickity/flickity.css">
+    <link rel="stylesheet" href="assets/plugin web design/plugin web design/Icon/fontawesome-5.2.0/css/all.css">
+    <link rel="stylesheet" href="assets/plugin web design/plugin web design/Sliders/flickity/flickity.css">
     <script src="assets/js/main.js"></script>
-    <script src="../plugin web design/plugin web design/jquery-3.3.1/jquery-3.3.1.js"></script>
-    <script src="../plugin web design/plugin web design/Sliders/flickity/flickity.pkgd.js"></script>
+    <script src="assets/plugin web design/plugin web design/jquery-3.3.1/jquery-3.3.1.js"></script>
+    <script src="assets/plugin web design/plugin web design/Sliders/flickity/flickity.pkgd.js"></script>
 </head>
 <body>
     <div class="wrapper">
         <section class="bg-header">
             <div class="wrap-center">
-                <a href=""><img src="../plugin web design/punya adi/logo.png" alt=""></a>
+                <a href=""><img src="assets/plugin web design/punya adi/logo.png" alt=""></a>
                 <nav>
                     <ul>
                         <li>
@@ -39,13 +39,13 @@
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                     <div class="carousel" data-flickity='{"autoPlay": true, "wrapAround": true}'>
                         <div class="carousel-cell">
-                            <img src="../plugin web design/Stiki/_0013_basic_hoodie_1.jpg" alt="">
+                            <img src="assets/plugin web design/Stiki/_0013_basic_hoodie_1.jpg" alt="">
                         </div>
                         <div class="carousel-cell">
-                            <img src="../plugin web design/Stiki/_0012_basic_hoodie_2.jpg" alt="">
+                            <img src="assets/plugin web design/Stiki/_0012_basic_hoodie_2.jpg" alt="">
                         </div>
                         <div class="carousel-cell">
-                            <img src="../plugin web design/Stiki/_0011_basic_hoodie_3.jpg" alt="">
+                            <img src="assets/plugin web design/Stiki/_0011_basic_hoodie_3.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-xs-12">
                     <div class="produk">
-                        <img src="../plugin web design/Stiki/_0015_gathered_sweatshirt_1.jpg" alt="">
+                        <img src="assets/plugin web design/Stiki/_0015_gathered_sweatshirt_1.jpg" alt="">
                         <div class="text-produk">
                             <div class="tombol">
                                 <i class="far fa-heart"></i>
@@ -152,14 +152,14 @@
                             <h3>$ 39.99</h3>
                             <h2>Gathered Sweatshirt</h2>
                             <div class="star">
-                                <img src="../plugin web design/punya adi/star.png" alt="">
+                                <img src="assets/plugin web design/punya adi/star.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-xs-12">
                     <div class="produk">
-                        <img src="../plugin web design/Stiki/leather_city_bag_with_knotted_detail_2.jpg" alt="">
+                        <img src="assets/plugin web design/Stiki/leather_city_bag_with_knotted_detail_2.jpg" alt="">
                         <div class="text-produk">
                             <div class="tombol">
                                 <i class="far fa-heart"></i>
@@ -168,14 +168,14 @@
                             <h3>$ 49.99</h3>
                             <h2>Leather City Bag</h2>
                             <div class="star">
-                                <img src="../plugin web design/punya adi/star.png" alt="">
+                                <img src="assets/plugin web design/punya adi/star.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-xs-12">
                     <div class="produk">
-                        <img src="../plugin web design/Stiki/_0001_hooded_sweatshirt_with_text_1_1_3.jpg" alt="">
+                        <img src="assets/plugin web design/Stiki/_0001_hooded_sweatshirt_with_text_1_1_3.jpg" alt="">
                         <div class="text-produk">
                             <div class="tombol">
                                 <i class="far fa-heart"></i>
@@ -184,14 +184,14 @@
                             <h3>$ 29.99</h3>
                             <h2>Classic Sweater</h2>
                             <div class="star">
-                                <img src="../plugin web design/punya adi/star.png" alt="">
+                                <img src="assets/plugin web design/punya adi/star.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-xs-12">
                     <div class="produk">
-                        <img src="../plugin web design/Stiki/_0011_hooded_corduroy_jacket_1.jpg" alt="">
+                        <img src="assets/plugin web design/Stiki/_0011_hooded_corduroy_jacket_1.jpg" alt="">
                         <div class="text-produk">
                             <div class="tombol">
                                 <i class="far fa-heart"></i>
@@ -200,7 +200,7 @@
                             <h3>$ 49.99</h3>
                             <h2>Parka Jacket</h2>
                             <div class="star">
-                                <img src="../plugin web design/punya adi/star.png" alt="">
+                                <img src="assets/plugin web design/punya adi/star.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                     <div class="news-footer">
                         <h2>Newsletter</h2>
                         <p>Subcribe to our newsletter</p>
-                        <input type="text" placeholder="Email...">
+                        <input type="text" placeholder="Emailassets.">
                         <button class="btn-news">Send</button>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <hr>
                     <div class="footer-bawah">
-                        <img src="../plugin web design/punya adi/logo.png" alt="">
+                        <img src="assets/plugin web design/punya adi/logo.png" alt="">
                         <p>Copyright 2019</p>
                     </div>
                 </div>
