--- a/index.html
+++ b/index.html
@@ -14,14 +14,40 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/plugin web design/plugin web design/jquery-3.3.1/jquery-3.3.1.js"></script>
     <script src="assets/plugin web design/plugin web design/Sliders/flickity/flickity.pkgd.js"></script>
+    <script>
+        function openBar(){
+            document.getElementById("bar").style.width = "100vw";
+        }
+
+        function closeBar(){
+            document.getElementById("bar").style.width = "0";
+        }
+    </script>
 </head>
 <body>
     <div class="wrapper">
+        <div class="slide-menu" id="bar">
+            <div class="close-menu" onclick="closeBar()">
+                <i class="fas fa-times"></i>
+            </div>
+            <ul>
+                <li><a href=""><i class="fas fa-shopping-bag"></i> Basket</a></li>
+                <li><a href=""><i class="fas fa-user"></i> User Config</a></li>
+                <li>
+                    <div class="tambahan">
+                        <div class="search">
+                            <input type="text" placeholder="Search ...">
+                            <button class="btn-search"><i class="fas fa-search"></i></button>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
         <section class="bg-header">
             <div class="wrap-center">
                 <a href=""><img src="assets/plugin web design/punya adi/logo.png" alt=""></a>
                 <nav>
-                    <ul>
+                    <ul class="menu">
                         <li>
                             <div class="search">
                                 <input type="text" placeholder="Search ...">
@@ -31,12 +57,16 @@
                         <li><a href="" class="pipe"><i class="fas fa-shopping-bag"></i></a></li>
                         <li><a href=""><i class="fas fa-user"></i></a></li>
                     </ul>
+                    <ul class="menu-phone" onclick="openBar()">
+                        <li><i class="fas fa-bars"></i></li>
+                    </ul>
                 </nav>
             </div>
         </section>
         <section class="bg-banner">
                 <div class="banner">
-                    <img src="assets/plugin web design/punya adi/mensoutfit.jpg" alt="">
+                    <img src="assets/plugin web design/punya adi/mensoutfit.jpg" alt="" class="img-desktop">
+                    <img src="assets/plugin web design/punya adi/backphone2.jpg" alt="" class="img-phone">
                     <div class="text-banner">
                         <h3>On <strong>Fashion</strong></h3>
                         <h1>Solution to your fashion problem</h1>
